--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,4 @@
 export(ask, autorun.jags, autorun.JAGS, autorun.jagsfile, autorun.JAGSfile, combine.mcmc, combine.MCMC, dump.format, findjags, findJAGS, new_unique, read.winbugs, read.WinBUGS, run.jags, run.JAGS, run.jagsfile, run.JAGSfile, testjags, testJAGS, timestring)
 
 S3method(print, gelman.with.target)
+S3method(print, plotindpages)
