--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: runjags
-Version: 0.9.5-2
-Date: 2009-31-10
+Version: 0.9.6-3
+Date: 2010-25-02
 Title: Run Bayesian MCMC Models in the BUGS syntax from Within R
 Author: Matthew Denwood <m.denwood@vet.gla.ac.uk> (funded as part of
         the DEFRA VTRI project 0101).
 Maintainer: Matthew Denwood <m.denwood@vet.gla.ac.uk>
 Depends: R (>= 2.6), coda, lattice, stats, utils
+Suggests: rjags
 SystemRequirements: jags
 Description: A set of functions to allow any user specified model to be
         run in JAGS from within R, returning the MCMC chains as R
@@ -17,10 +18,13 @@ Description: A set of functions to allow any user specified model to be
         models to simplify the process of achieving chain convergence.
         Designed for maximum compatibility with WinBUGS syntax,
         although minor modification to existing .bug files will be
-        required.  Requires Just Another Gibbs Sampler (JAGS) for most
+        required.  Also provides functions for submission and retrieval
+        of jobs (both JAGS runs and user-specified R code execution) to
+        Apple Xgrid distributed computing clusters (Mac OS X machines
+        only).  Requires Just Another Gibbs Sampler (JAGS) for most
         functions, see: http://www-fis.iarc.fr/~martyn/software/jags/
 License: GPL
 URL: http://cran.r-project.org/web/packages/runjags/
-Packaged: 2009-10-31 19:39:13 UTC; matthewdenwood
+Packaged: 2010-02-25 15:18:50 UTC; matthewdenwood
 Repository: CRAN
-Date/Publication: 2009-11-01 17:34:08
+Date/Publication: 2010-02-26 07:46:08
