--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,8 @@
 Package: runjags
-Version: 0.9.6-3
-Date: 2010-25-02
+Version: 0.9.6-4
+Date: 2010-30-04
 Title: Run Bayesian MCMC Models in the BUGS syntax from Within R
-Author: Matthew Denwood <m.denwood@vet.gla.ac.uk> (funded as part of
-        the DEFRA VTRI project 0101).
+Author: Matthew Denwood <m.denwood@vet.gla.ac.uk>
 Maintainer: Matthew Denwood <m.denwood@vet.gla.ac.uk>
 Depends: R (>= 2.6), coda, lattice, stats, utils
 Suggests: rjags
@@ -25,6 +24,6 @@ Description: A set of functions to allow any user specified model to be
         functions, see: http://www-fis.iarc.fr/~martyn/software/jags/
 License: GPL
 URL: http://cran.r-project.org/web/packages/runjags/
-Packaged: 2010-02-25 15:18:50 UTC; matthewdenwood
+Packaged: 2010-04-30 10:05:27 UTC; matthewdenwood
 Repository: CRAN
-Date/Publication: 2010-02-26 07:46:08
+Date/Publication: 2010-05-01 16:00:14
