--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: runjags
-Version: 0.9.7-1
-Date: 2010-30-06
+Version: 0.9.9-1
+Date: 2010-18-11
 Title: Run Bayesian MCMC Models in the BUGS syntax from Within R
-Author: Matthew Denwood <m.denwood@vet.gla.ac.uk>
-Maintainer: Matthew Denwood <m.denwood@vet.gla.ac.uk>
-Depends: R (>= 2.6), coda, lattice, stats, utils
+Author: Matthew Denwood <matthew.denwood@glasgow.ac.uk>
+Maintainer: Matthew Denwood <matthew.denwood@glasgow.ac.uk>
+Depends: R (>= 2.9), coda, lattice, stats, utils
 Suggests: rjags
 SystemRequirements: jags
 Description: A set of functions to allow any user specified model to be
@@ -24,6 +24,6 @@ Description: A set of functions to allow any user specified model to be
         functions, see: http://www-fis.iarc.fr/~martyn/software/jags/
 License: GPL
 URL: http://cran.r-project.org/web/packages/runjags/
-Packaged: 2010-07-01 15:47:23 UTC; matthewdenwood
+Packaged: 2010-11-18 18:32:03 UTC; matthewdenwood
 Repository: CRAN
-Date/Publication: 2010-07-01 18:26:31
+Date/Publication: 2010-11-20 14:19:03
