--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
-export(ask, autorun.jags, autorun.JAGS, autorun.jagsfile, autorun.JAGSfile, combine.mcmc, combine.MCMC, dump.format, findjags, findJAGS, new_unique, read.winbugs, read.WinBUGS, run.jags, run.JAGS, run.jagsfile, run.JAGSfile, testjags, testJAGS, timestring, xgrid.run.JAGS, xgrid.run.jags, xgrid.autorun.JAGS, xgrid.autorun.jags, xgrid.run.JAGSfile, xgrid.run.jagsfile, xgrid.autorun.JAGSfile, xgrid.autorun.jagsfile, xgrid.submit.JAGS, xgrid.submit.jags, xgrid.submit.JAGSfile, xgrid.submit.jagsfile, xgrid.results.JAGS, xgrid.results.jags, xgrid.run, xgrid.submit, xgrid.results, install.mgrid)
+export(ask, autorun.jags, autorun.JAGS, autorun.jagsfile, autorun.JAGSfile, combine.mcmc, combine.MCMC, dump.format, findjags, findJAGS, new_unique, read.winbugs, read.WinBUGS, run.jags, run.JAGS, run.jagsfile, run.JAGSfile, testjags, testJAGS, timestring, xgrid.run.JAGS, xgrid.run.jags, xgrid.autorun.JAGS, xgrid.autorun.jags, xgrid.run.JAGSfile, xgrid.run.jagsfile, xgrid.autorun.JAGSfile, xgrid.autorun.jagsfile, xgrid.submit.JAGS, xgrid.submit.jags, xgrid.submit.JAGSfile, xgrid.submit.jagsfile, xgrid.results.JAGS, xgrid.results.jags, xgrid.run, xgrid.submit, xgrid.results, xapply, install.mgrid)
 
 S3method(print, gelman.with.target)
 S3method(print, plotindpages)
+S3method(print, dic.stats)
