--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,29 +1,24 @@
 Package: runjags
-Version: 0.9.9-1
-Date: 2010-18-11
-Title: Run Bayesian MCMC Models in the BUGS syntax from Within R
+Version: 0.9.9-2
+Date: 2011-19-08
+Title: Interface utilities for JAGS (using BUGS syntax) and Apple Xgrid
+        distributed computing clusters
 Author: Matthew Denwood <matthew.denwood@glasgow.ac.uk>
 Maintainer: Matthew Denwood <matthew.denwood@glasgow.ac.uk>
-Depends: R (>= 2.9), coda, lattice, stats, utils
+Depends: R (>= 2.13), coda, lattice, stats, utils
 Suggests: rjags
-SystemRequirements: jags
-Description: A set of functions to allow any user specified model to be
-        run in JAGS from within R, returning the MCMC chains as R
-        objects.  Includes functions to read external WinBUGS type
-        textfiles, and allows several ways of automatically specifying
-        model data from existing R objects or R functions.  Also
-        includes functions to automatically calculate model run length,
-        autocorrealtion and Gelman Rubin statistic diagnostics for all
-        models to simplify the process of achieving chain convergence.
-        Designed for maximum compatibility with WinBUGS syntax,
-        although minor modification to existing .bug files will be
-        required.  Also provides functions for submission and retrieval
-        of jobs (both JAGS runs and user-specified R code execution) to
-        Apple Xgrid distributed computing clusters (Mac OS X machines
-        only).  Requires Just Another Gibbs Sampler (JAGS) for most
-        functions, see: http://www-fis.iarc.fr/~martyn/software/jags/
+SystemRequirements: jags (see http://mcmc-jags.sourceforge.net)
+Description: A set of utility functions to run BUGS models using JAGS
+        from within R, and for JAGS or arbitrary R code submission to
+        Xgrid clusters (requires Mac OS X).  Automatic control of model
+        run length, calculation of autocorrealtion and Gelman Rubin
+        statistic diagnostics, generation of trace and density plots,
+        calculation of DIC, and automatic retrieval of R objects as
+        data are supported.  Utilities to run user-supplied R functions
+        on Xgrid (using xapply as a replacement for lapply) are also
+        included, and do not require JAGS.
 License: GPL
 URL: http://cran.r-project.org/web/packages/runjags/
-Packaged: 2010-11-18 18:32:03 UTC; matthewdenwood
+Packaged: 2011-08-19 16:10:50 UTC; matthewdenwood
 Repository: CRAN
-Date/Publication: 2010-11-20 14:19:03
+Date/Publication: 2011-08-19 17:21:41
