--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,34 +1,22 @@
 Package: runjags
-Version: 1.0.1-1
-Date: 2013-04-25
-Title: Interface utilities for MCMC models in Just Another Gibbs
-        Sampler (JAGS) using parallel and distributed computing methods
+Version: 1.1.0-3
+Date: 2013-09-14
+Title: Interface utilities, parallel computing methods and additional
+        distributions for MCMC models in JAGS
 Author: Matthew Denwood <matthew.denwood@glasgow.ac.uk>
 Maintainer: Matthew Denwood <matthew.denwood@glasgow.ac.uk>
-Depends: R (>= 2.14), coda (>= 0.16-1), lattice (>= 0.20-10), parallel
-Imports: coda, lattice, parallel, stats, utils
+Copyright: The code in src/distributions/jags/ (and elements elsewhere
+        where indicated) is Copyright (C) 2002-10 Martyn Plummer,
+        licensed under GPL-2.  All other code is Copyright (C) Matthew
+        Denwood, licensed under GPL-2.
+Depends: R (>= 2.14)
+Imports: coda (>= 0.16-1), lattice (>= 0.20-10), parallel
 Suggests: rjags
 SystemRequirements: jags (see http://mcmc-jags.sourceforge.net)
-Description: This package provides high-level interface utilities for
-        JAGS, either running locally (via the rjags package or using
-        multiple cores in parallel) or via distributed computing
-        clusters such as those provided by snow (a Simple Network Of
-        Workstations), Apple Xgrid distributed computing clusters (Mac
-        OS X 10.5-10.7 only), and possibly others via user specified
-        functions.  The primary motivation is to facilitate running
-        relatively simple JAGS models to convergence, including
-        evaluating the performance of a model against simulated data,
-        and compatibility with the WinBUGS syntax of model files with
-        data and initial values lists.  Runjags interface functions
-        also provide convenience wrappers for automatic control of
-        model convergence assessment and run length diagnostics,
-        calculation of relevant summary statistics, generation of trace
-        and density plots, calculation of DIC, and automatic retrieval
-        of R objects as data and initial values.  Running of arbitrary
-        R commands (not involving JAGS) over Xgrid is also supported.
-License: GPL
+Description: This package provides high-level interface utilities for Just Another Gibbs Sampler (JAGS), either running locally (via the rjags package or using multiple cores in parallel) or via distributed computing clusters such as those provided by snow (a Simple Network Of Workstations), Xgrid, or other user specified functions.  A JAGS extension module providing the full Pareto family of distributions for use in JAGS models is also provided.  The primary functions facilitate running JAGS models to convergence, evaluate the performance of a model against simulated data, provide automated calculation of summary statistics, and are compatible with the WinBUGS syntax of model files with data and initial values lists.  Running of arbitrary R commands (not involving JAGS) over Xgrid is also supported.
+License: GPL-2
 URL: http://cran.r-project.org/web/packages/runjags/
-Packaged: 2013-04-25 15:29:26 UTC; matthewdenwood
-NeedsCompilation: no
+Packaged: 2013-09-14 13:51:33 UTC; matthewdenwood
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-04-25 22:42:58
+Date/Publication: 2013-09-14 17:02:52
