--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ S3method(print, runjags.model)
 S3method(print, runjags.data)
 S3method(print, runjags.inits)
 S3method(print, runjags.output)
+S3method(print, rjags.output)
 S3method(print, mcse.stats)
 S3method(print, crosscorr.stats)
 S3method(print, gelman.target)
