--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: runjags
-Version: 1.2.0-3
-Date: 2013-11-16
+Version: 1.2.0-7
+Date: 2013-11-19
 Title: Interface utilities, parallel computing methods and additional
         distributions for MCMC models in JAGS
 Author: Matthew Denwood <matthew.denwood@glasgow.ac.uk>
@@ -13,10 +13,10 @@ Depends: R (>= 2.14)
 Imports: parallel, lattice (>= 0.20-10), coda (>= 0.16-1)
 Suggests: rjags
 SystemRequirements: jags (see http://mcmc-jags.sourceforge.net)
-Description: This package provides high-level interface utilities for Just Another Gibbs Sampler (JAGS), either running locally (via the rjags package or separate JAGS instances) or via distributed computing clusters such as those provided by snow (a Simple Network Of Workstations), Xgrid, or other user specified functions.  A JAGS extension module providing the full Pareto family of distributions for use in JAGS models is also provided.  The primary functions facilitate running parallel JAGS models for multiple chains, automated control of convergence and sample length diagnostics, evaluation of the performance of a model against simulated data, and compatibility with the WinBUGS syntax of model files with data and initial values lists.  Running of arbitrary R commands (not involving JAGS) over Xgrid is also supported.
+Description: This package provides high-level interface utilities for Just Another Gibbs Sampler (JAGS).  The primary functions facilitate running parallel JAGS models for multiple chains, automated control of convergence and sample length diagnostics, evaluation of the performance of a model against simulated data, and compatibility with the WinBUGS syntax of model files with data and initial values lists.  Model fitting can be done locally (via the rjags package or separate JAGS instances) or via distributed computing clusters such as those provided by snow (a Simple Network Of Workstations), Xgrid, or other user specified functions.  A JAGS extension module implementing additional distributions for JAGS models (including the Pareto family of distributions) is also provided.
 License: GPL-2
 URL: http://cran.r-project.org/web/packages/runjags/
-Packaged: 2013-11-16 19:20:13 UTC; matthewdenwood
+Packaged: 2013-11-19 10:34:26 UTC; matthewdenwood
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-11-17 08:24:50
+Date/Publication: 2013-11-19 12:38:05
