--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,22 @@
 Package: runjags
-Version: 1.2.0-7
-Date: 2013-11-19
+Version: 1.2.1-0
+Date: 2014-06-20
 Title: Interface utilities, parallel computing methods and additional
         distributions for MCMC models in JAGS
-Author: Matthew Denwood <matthew.denwood@glasgow.ac.uk>
-Maintainer: Matthew Denwood <matthew.denwood@glasgow.ac.uk>
+Author: Matthew Denwood <md@sund.ku.dk>
+Maintainer: Matthew Denwood <md@sund.ku.dk>
 Copyright: The code in src/distributions/jags/ (and elements elsewhere
         where indicated) is Copyright (C) 2002-10 Martyn Plummer,
         licensed under GPL-2.  All other code is Copyright (C) Matthew
         Denwood, licensed under GPL-2.
 Depends: R (>= 2.14)
-Imports: parallel, lattice (>= 0.20-10), coda (>= 0.16-1)
+Imports: parallel, lattice (>= 0.20-10), coda (>= 0.16-1), stats, utils
 Suggests: rjags
 SystemRequirements: jags (see http://mcmc-jags.sourceforge.net)
 Description: This package provides high-level interface utilities for Just Another Gibbs Sampler (JAGS).  The primary functions facilitate running parallel JAGS models for multiple chains, automated control of convergence and sample length diagnostics, evaluation of the performance of a model against simulated data, and compatibility with the WinBUGS syntax of model files with data and initial values lists.  Model fitting can be done locally (via the rjags package or separate JAGS instances) or via distributed computing clusters such as those provided by snow (a Simple Network Of Workstations), Xgrid, or other user specified functions.  A JAGS extension module implementing additional distributions for JAGS models (including the Pareto family of distributions) is also provided.
 License: GPL-2
 URL: http://cran.r-project.org/web/packages/runjags/
-Packaged: 2013-11-19 10:34:26 UTC; matthewdenwood
+Packaged: 2014-06-20 17:03:03 UTC; matthewdenwood
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-11-19 12:38:05
+Date/Publication: 2014-06-21 20:48:42
