--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,35 @@
 Package: runjags
-Version: 1.2.1-0
-Date: 2014-06-20
-Title: Interface utilities, parallel computing methods and additional
-        distributions for MCMC models in JAGS
-Author: Matthew Denwood <md@sund.ku.dk>
-Maintainer: Matthew Denwood <md@sund.ku.dk>
-Copyright: The code in src/distributions/jags/ (and elements elsewhere
-        where indicated) is Copyright (C) 2002-10 Martyn Plummer,
-        licensed under GPL-2.  All other code is Copyright (C) Matthew
-        Denwood, licensed under GPL-2.
-Depends: R (>= 2.14)
-Imports: parallel, lattice (>= 0.20-10), coda (>= 0.16-1), stats, utils
-Suggests: rjags
-SystemRequirements: jags (see http://mcmc-jags.sourceforge.net)
-Description: This package provides high-level interface utilities for Just Another Gibbs Sampler (JAGS).  The primary functions facilitate running parallel JAGS models for multiple chains, automated control of convergence and sample length diagnostics, evaluation of the performance of a model against simulated data, and compatibility with the WinBUGS syntax of model files with data and initial values lists.  Model fitting can be done locally (via the rjags package or separate JAGS instances) or via distributed computing clusters such as those provided by snow (a Simple Network Of Workstations), Xgrid, or other user specified functions.  A JAGS extension module implementing additional distributions for JAGS models (including the Pareto family of distributions) is also provided.
+Version: 2.0.1-2
+Date: 2015-04-12
+Title: Interface Utilities, Model Templates, Parallel Computing Methods
+        and Additional Distributions for MCMC Models in JAGS
+Authors@R: c(person("Matthew", "Denwood", role=c("aut","cre"),
+                    email="md@sund.ku.dk"),
+             person("Martyn", "Plummer", role="cph", comment="Copyright holder of the code in /src/distributions/jags, src/distributions/DPar1.*, configure.ac, and original copyright holder of some modified code where indicated"))
+Depends: R (>= 2.14.0)
+Imports: parallel, lattice (>= 0.20-10), coda (>= 0.17-1), stats, utils
+Suggests: rjags, modeest, knitr
+VignetteBuilder: knitr
+SystemRequirements: jags (http://mcmc-jags.sourceforge.net)
+Description: User-friendly interface utilities for MCMC models via 
+	Just Another Gibbs Sampler (JAGS), facilitating the use of parallel 
+	(or distributed) processors for multiple chains, automated control
+	of convergence and sample length diagnostics, and evaluation of the 
+	performance of a model using drop-k validation or against simulated
+	data. Template model specifications can be generated using a standard
+	lme4-style formula interface to assist users less familiar with the 
+	BUGS syntax.  A JAGS extension module provides additional distributions 
+	including the Pareto family of distributions, the DuMouchel prior and 
+	the half-Cauchy prior.
 License: GPL-2
-URL: http://cran.r-project.org/web/packages/runjags/
-Packaged: 2014-06-20 17:03:03 UTC; matthewdenwood
+URL: http://runjags.sourceforge.net
 NeedsCompilation: yes
+Packaged: 2015-04-12 10:44:43 UTC; matthewdenwood
+Author: Matthew Denwood [aut, cre],
+  Martyn Plummer [cph] (Copyright holder of the code in
+    /src/distributions/jags, src/distributions/DPar1.*, configure.ac,
+    and original copyright holder of some modified code where
+    indicated)
+Maintainer: Matthew Denwood <md@sund.ku.dk>
 Repository: CRAN
-Date/Publication: 2014-06-21 20:48:42
+Date/Publication: 2015-04-12 16:22:37
