--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -7,8 +7,8 @@
 ###
 ######################################################################################################
 
-PKG_CPPFLAGS=-I@JAGS_INCLUDE@ 
+PKG_CPPFLAGS=-I@JAGS_INCLUDE@
 PKG_LIBS=-L@JAGS_LIB@ -ljags @JAGS_RPATH@
 
-OBJECTS= distributions/jags/DFunction.o distributions/jags/DPQFunction.o distributions/jags/PFunction.o distributions/jags/QFunction.o distributions/jags/RScalarDist.o distributions/DPar1.o distributions/DPar2.o distributions/DPar3.o distributions/DPar4.o distributions/DLomax.o distributions/DMouchel.o distributions/DGenPar.o distributions/DHCauchy.o runjags.o testrunjags.o
+OBJECTS= distributions/jags/DFunction.o distributions/jags/DPQFunction.o distributions/jags/PFunction.o distributions/jags/QFunction.o distributions/jags/RScalarDist.o distributions/DPar1.o distributions/DPar2.o distributions/DPar3.o distributions/DPar4.o distributions/DLomax.o distributions/DMouchel.o distributions/DGenPar.o distributions/DHalfCauchy.o runjags.o testrunjags.o
 
