--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: runjags
-Version: 2.0.1-2
-Date: 2015-04-12
+Version: 2.0.1-4
+Date: 2015-04-14
 Title: Interface Utilities, Model Templates, Parallel Computing Methods
         and Additional Distributions for MCMC Models in JAGS
 Authors@R: c(person("Matthew", "Denwood", role=c("aut","cre"),
@@ -10,7 +10,7 @@ Depends: R (>= 2.14.0)
 Imports: parallel, lattice (>= 0.20-10), coda (>= 0.17-1), stats, utils
 Suggests: rjags, modeest, knitr
 VignetteBuilder: knitr
-SystemRequirements: jags (http://mcmc-jags.sourceforge.net)
+SystemRequirements: JAGS (http://mcmc-jags.sourceforge.net)
 Description: User-friendly interface utilities for MCMC models via 
 	Just Another Gibbs Sampler (JAGS), facilitating the use of parallel 
 	(or distributed) processors for multiple chains, automated control
@@ -23,13 +23,13 @@ Description: User-friendly interface utilities for MCMC models via
 	the half-Cauchy prior.
 License: GPL-2
 URL: http://runjags.sourceforge.net
-NeedsCompilation: yes
-Packaged: 2015-04-12 10:44:43 UTC; matthewdenwood
+Packaged: 2015-04-14 22:23:57 UTC; matthewdenwood
 Author: Matthew Denwood [aut, cre],
   Martyn Plummer [cph] (Copyright holder of the code in
     /src/distributions/jags, src/distributions/DPar1.*, configure.ac,
     and original copyright holder of some modified code where
     indicated)
 Maintainer: Matthew Denwood <md@sund.ku.dk>
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2015-04-12 16:22:37
+Date/Publication: 2015-04-15 01:16:58
